--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-git": "^2.10.1",
