--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/q0r3y/js-prj7#readme",
   "devDependencies": {
-    "ejs": "^3.1.5"
+    "ejs": "^3.1.5",
+    "formidable": "^1.2.2"
   }
 }
