--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,22 @@
 {
-  "name": "PWA ATM",
-  "short_name": "ATM",
+  "name": "Mr.Bigs Banking App",
+  "short_name": "Mr.Bigs Bank",
   "lang": "en-US",
   "start_url": "/",
   "icons": [
     {
-      "src": "src/images/152-bitcoin.png",
-      "sizes": "152x152",
+      "src": "src/images/192-bitcoin.png",
+      "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "public/images/512-bitcoin.png",
+      "src": "src/images/512-bitcoin.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "theme_color": "#1779ba",
-  "background_color": "#ffffff",
-  "display": "standalone",
-  "orientation": "portrait"
+  "theme_color": "#4682b4",
+  "background_color": "#4682b4",
+  "display": "standalone"
 }
